kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/pong/src/std/opt.k
pub type Opt(T: Type) {
    none(T: Type): Opt(T),
    some(T: Type, t: T): Opt(T),
}
