kanc/src/tests/sample_code/should_fail/single_file/parse/visibility/super1.k
pub(super1) type A {}
